# InterviewHelp

./: .env  .gitignore  CLAUDE.md  README.md  TASKS.md  benchmarking.md  pyproject.toml  test_interview_helper.py
chroma_db/: chroma.sqlite3
src/interview_help.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/interview_helper/: __init__.py  cli.py  config.py  core.py  data_loader.py  ollama_client.py  readers.py  vector_store.py
src/interview_helper/llm/: __init__.py  base.py  factory.py  mlx_client.py  ollama_client.py
