[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-help"
version = "0.1.0"
description = "Personal Interview Helper with RAG - Stores and retrieves interview data using Ollama models and ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ajaiswal1818", email = "ajaiswal1818@gmail.com" }
]
keywords = ["interview", "rag", "ollama", "chromadb", "llm"]
dependencies = [
    "ollama-api>=0.1.1",
    "chromadb>=0.4.13",
    "sentence-transformers>=2.2.0",
    "anyio>=4.3.0",
    "click>=8.1.7",
    "rich>=13.7.1",
    "pydantic>=2.5.3",
    "tqdm>=4.66.4",
    "pypdf>=4.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
interview-helper = "interview_helper.cli:interview_helper"
